z-index fix and wording modification

--- a/styles/_game.scss
+++ b/styles/_game.scss
@@ -42,6 +42,7 @@
       font-family: $phosphatesolid;
       letter-spacing: 1.2px;
       font-size: 25px;
+      z-index: 2;
     }
     .congressman-infos{
       margin-bottom: 10px;
